@@ -1,3 +1,8 @@
+2007-03-13  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps):
+	Introduce pixel aspect ratio handling.
+
 2007-03-12  Julien MOUTTE  <julien@moutte.net>
 
 	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_init),
